fix some api and function
