# api_server/services/accountService/service.go
@@ -13,7 +13,7 @@ import (
 // Service service for account
 type Service interface {
 	CreateNewUser(user *model.User) (*model.User, error)
-	GetFilterListUser(name, rank, nickname *string, page int, pageSize int) ([]model.User, int, error)
+	GetFilterListUser(name, rank, nickname *string) ([]model.User, int, error)
 	GetUserByID(id string) (*model.User, error)
 	UpdateUser(accountID int, updateUser *model.User) error
 	UpdatePassword(id int, oldPass string, newPass string) error
@@ -46,8 +46,8 @@ func (s *service) CreateNewUser(user *model.User) (*model.User, error) {
 	return newUser, nil
 }
 
-func (s *service) GetFilterListUser(name, rank, nickname *string, page int, pageSize int) ([]model.User, int, error) {
-	listUser, total, err := s.userRepository.GetFilterListUser(name, rank, nickname, page, pageSize)
+func (s *service) GetFilterListUser(name, rank, nickname *string) ([]model.User, int, error) {
+	listUser, total, err := s.userRepository.GetFilterListUser(name, rank, nickname)
 	if err != nil {
 		return nil, 0, err
 	}
